<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:tag="layout/ve_activity_car_unbind_0" android:background="@color/white" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.core.widget.NestedScrollView android:id="@id/sv" android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="1.0">
        <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="20.0dip" android:layout_marginTop="12.0dip" android:layout_marginRight="20.0dip" android:layout_marginHorizontal="20.0dip" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/et_vin_code">
            <ImageView android:layout_gravity="center" android:layout_width="260.0dip" android:layout_height="260.0dip" android:src="@mipmap/ora_ve_update_noactivated_icon" />
            <TextView android:textSize="@dimen/dimen_common_text_size_18" android:textStyle="bold" android:textColor="@color/color_2F2F2F" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dimen_common_28" android:text="@string/ve_unbind_tip" />
            <TextView android:textSize="@dimen/dimen_common_text_size_16" android:textColor="@color/color_2F2F2F" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="8.0dip" android:text="@string/ve_unbind_tip_content" />
            <TextView android:textSize="@dimen/dimen_common_text_size_14" android:textColor="#ff13b0b9" android:id="@id/tv_unbind_to_share" android:tag="binding_1" android:paddingTop="@dimen/dimen_common_8" android:paddingBottom="@dimen/dimen_common_8" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/ve_unbind_view_shared_relation" android:drawableRight="@mipmap/me_list_right" android:paddingVertical="@dimen/dimen_common_8" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
    <TextView android:textSize="@dimen/dimen_common_text_size_14" android:textColor="@color/ve_color_666666" android:paddingTop="@dimen/dimen_common_8" android:paddingBottom="@dimen/dimen_common_8" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="@dimen/dimen_common_20" android:text="@string/ve_unbind_last_confirm_tip" android:paddingVertical="@dimen/dimen_common_8" />
    <androidx.appcompat.widget.AppCompatButton android:id="@id/submit" android:tag="binding_2" android:layout_marginLeft="@dimen/dimen_common_20" android:layout_marginRight="@dimen/dimen_common_20" android:layout_marginBottom="@dimen/dimen_common_40" android:text="@string/ac_confirm_title" style="@style/ve_button" />
</LinearLayout>