<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:background="@drawable/picture_dialog_shadow" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textSize="16.0sp" android:textColor="@color/picture_color_ff572e" android:gravity="center" android:id="@id/tvTitle" android:padding="15.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/picture_prompt" />
    <View android:id="@id/top_line" android:background="@color/picture_color_e" android:layout_width="fill_parent" android:layout_height="0.5dip" android:layout_marginLeft="15.0dip" android:layout_marginRight="15.0dip" android:layout_below="@id/tvTitle" />
    <TextView android:textSize="15.0sp" android:textColor="#ff53575e" android:gravity="center" android:id="@id/tv_content" android:paddingLeft="15.0dip" android:paddingTop="30.0dip" android:paddingRight="15.0dip" android:paddingBottom="30.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/picture_prompt_content" android:layout_below="@id/top_line" />
    <View android:id="@id/bottom_line" android:background="@color/picture_color_e" android:layout_width="fill_parent" android:layout_height="0.5dip" android:layout_below="@id/tv_content" />
    <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="45.0dip" android:layout_below="@id/bottom_line">
        <Button android:textColor="@color/picture_color_529BeA" android:id="@id/btn_cancel" android:background="@drawable/picture_btn_left_bottom_selector" android:layout_width="0.0dip" android:layout_height="fill_parent" android:text="@string/picture_cancel" android:layout_weight="1.0" />
        <View android:background="@color/picture_color_e" android:layout_width="0.5dip" android:layout_height="fill_parent" />
        <Button android:textColor="@color/picture_color_529BeA" android:id="@id/btn_commit" android:background="@drawable/picture_btn_right_bottom_selector" android:layout_width="0.0dip" android:layout_height="fill_parent" android:text="@string/picture_confirm" android:layout_weight="1.0" />
    </LinearLayout>
</RelativeLayout>