<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:id="@id/select_bar_layout" android:background="@color/picture_color_grey" android:layout_width="fill_parent" android:layout_height="45.0dip" android:layout_alignParentBottom="true"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:enabled="false" android:textSize="14.0sp" android:textColor="@color/picture_list_text_color" android:gravity="center" android:id="@id/picture_id_preview" android:padding="12.0dip" android:layout_width="wrap_content" android:layout_height="fill_parent" android:layout_marginLeft="3.0dip" android:text="@string/picture_preview" android:layout_centerVertical="true" />
    <CheckBox android:textSize="14.0sp" android:textColor="@color/picture_color_53575e" android:gravity="center" android:id="@id/cb_original" android:background="@color/picture_color_transparent" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="fill_parent" android:button="@color/picture_color_transparent" android:text="@string/picture_original_image" android:layout_centerInParent="true" android:layout_centerVertical="true" android:paddingStart="5.0dip" />
    <TextView android:enabled="false" android:textSize="14.0sp" android:textColor="@color/picture_list_text_color" android:gravity="center" android:id="@id/picture_tv_ok" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/picture_please_select" android:layout_centerVertical="true" android:paddingEnd="12.0dip" android:layout_marginEnd="20.0dip" android:layout_alignParentEnd="true" />
    <TextView android:textSize="12.0sp" android:textColor="@color/picture_color_white" android:gravity="center" android:id="@id/tv_media_num" android:background="@drawable/picture_num_oval" android:visibility="invisible" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_centerVertical="true" android:layout_marginEnd="5.0dip" android:layout_toStartOf="@id/picture_tv_ok" />
</RelativeLayout>