<?xml version="1.0" encoding="utf-8"?>
<FrameLayout android:layout_width="fill_parent" android:layout_height="@dimen/dp_40"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:gravity="center" android:orientation="horizontal" android:id="@id/load_more_loading_view" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <com.beans.base.ui.widget.HFLoadingView android:id="@id/iv_hf_loading_view" android:visibility="visible" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/base_ic_loading_gray" />
        <TextView android:textSize="@dimen/sp_14" android:textColor="@color/color_96969B" android:id="@id/loading_text" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/margin_8" android:text="加载中..." />
    </LinearLayout>
    <FrameLayout android:id="@id/load_more_load_fail_view" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <TextView android:layout_gravity="center" android:id="@id/tv_prompt" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/brvah_load_failed" />
    </FrameLayout>
    <FrameLayout android:id="@id/load_more_load_complete_view" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <TextView android:textColor="@android:color/darker_gray" android:layout_gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/brvah_load_complete" />
    </FrameLayout>
    <FrameLayout android:id="@id/load_more_load_end_view" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <TextView android:textColor="@android:color/darker_gray" android:layout_gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/base_loadmore_finish" />
    </FrameLayout>
</FrameLayout>