<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:tag="layout/ve_fragment_map_permission_dialog_0" android:background="@drawable/ve_bg_white" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <androidx.appcompat.widget.AppCompatTextView android:textSize="@dimen/ve_title_text_size" android:textColor="@color/ve_title_text_color_dark" android:gravity="center" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dimen_common_24" android:text="@string/ve_location_request_permission_tip" android:layout_marginStart="@dimen/dimen_common_48" android:layout_marginEnd="@dimen/dimen_common_48" />
    <androidx.appcompat.widget.AppCompatButton android:textSize="@dimen/ve_title_text_size" android:textColor="@color/white" android:gravity="center" android:id="@id/allow_btn" android:tag="binding_1" android:background="@drawable/business_selector_button_positive" android:layout_width="fill_parent" android:layout_height="@dimen/dimen_common_46" android:layout_marginTop="@dimen/dimen_common_24" android:text="@string/ve_location_permission_allow" android:textAllCaps="false" android:layout_marginStart="@dimen/dimen_common_24" android:layout_marginEnd="@dimen/dimen_common_24" style="?android:borderlessButtonStyle" />
    <androidx.appcompat.widget.AppCompatButton android:textSize="@dimen/ve_title_text_size" android:textColor="@color/color_13B0B9" android:gravity="center" android:id="@id/deny_btn" android:tag="binding_2" android:background="@drawable/business_selector_button_negative" android:layout_width="fill_parent" android:layout_height="@dimen/dimen_common_46" android:layout_marginTop="@dimen/dimen_common_16" android:layout_marginBottom="@dimen/dimen_common_50" android:text="@string/ve_location_permission_deny" android:textAllCaps="false" android:layout_marginStart="@dimen/dimen_common_24" android:layout_marginEnd="@dimen/dimen_common_24" style="?android:borderlessButtonStyle" />
</LinearLayout>