<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:tag="layout/ve_charging_cancel_pop_0" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginStart="@dimen/dimen_common_10" android:layout_marginEnd="@dimen/dimen_common_10"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.appcompat.widget.AppCompatTextView android:textSize="@dimen/ve_text_normal_size" android:textColor="@color/color_333333" android:gravity="center" android:id="@id/title" android:layout_width="fill_parent" android:layout_height="@dimen/dimen_common_55" android:text="@string/ve_travel_itinerary_back_tips" app:bl_corners_topLeftRadius="@dimen/dimen_common_10" app:bl_corners_topRightRadius="@dimen/dimen_common_10" app:bl_solid_color="@color/white" app:layout_constraintTop_toTopOf="parent" />
    <View android:id="@id/view" android:background="@color/color_D8D8D8" android:layout_width="fill_parent" android:layout_height="0.5dip" app:layout_constraintTop_toBottomOf="@id/title" />
    <androidx.appcompat.widget.AppCompatTextView android:textSize="@dimen/ve_title_text_size" android:textColor="@color/ve_color_666666" android:gravity="center" android:id="@id/discard" android:layout_width="fill_parent" android:layout_height="@dimen/dimen_common_50" android:text="@string/ve_travel_itinerary_back_cancel" app:bl_corners_bottomLeftRadius="@dimen/dimen_common_10" app:bl_corners_bottomRightRadius="@dimen/dimen_common_10" app:bl_solid_color="@color/white" app:layout_constraintTop_toBottomOf="@id/view" />
    <androidx.appcompat.widget.AppCompatTextView android:textSize="@dimen/ve_title_text_size" android:textColor="@color/color_333333" android:gravity="center" android:id="@id/cancel" android:layout_width="fill_parent" android:layout_height="@dimen/dimen_common_50" android:layout_marginTop="@dimen/dimen_common_6" android:layout_marginBottom="@dimen/dimen_common_12" android:text="@string/ve_travel_itinerary_back_keep" app:bl_corners_radius="@dimen/dimen_common_10" app:bl_solid_color="@color/white" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintTop_toBottomOf="@id/discard" />
</androidx.constraintlayout.widget.ConstraintLayout>