<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:tag="layout/ac_register_edit_full_name_activity_0" android:background="@color/white" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <ScrollView android:id="@id/scroll_view" android:scrollbars="none" android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_marginBottom="10.0dip" android:fillViewport="true" app:layout_constraintBottom_toTopOf="@id/btn_next" app:layout_constraintTop_toTopOf="parent">
        <androidx.constraintlayout.widget.ConstraintLayout android:orientation="vertical" android:background="@color/white" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <androidx.appcompat.widget.AppCompatTextView android:textSize="32.0sp" android:textColor="@color/color_2F2F2F" android:id="@id/tv_title" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dimen_common_20" android:text="@string/ac_full_name_title" android:layout_marginStart="@dimen/dimen_common_20" android:layout_marginEnd="@dimen/dimen_common_20" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" />
            <androidx.appcompat.widget.AppCompatTextView android:textSize="@dimen/dimen_common_text_size_14" android:textColor="@color/color_ff686868" android:id="@id/tv_title_tips" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dimen_common_16" android:text="@string/ac_full_name_des" android:layout_marginEnd="@dimen/dimen_common_20" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="@id/tv_title" app:layout_constraintTop_toBottomOf="@id/tv_title" />
            <com.beans.widget.edit.material.MaterialEditText android:textSize="@dimen/dimen_common_text_size_18" android:textColor="@color/color_2F2F2F" android:textColorHint="#ffbdbdbd" android:id="@id/edit_first" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginTop="40.0dip" android:hint="@string/ac_first_name" android:maxLength="35" android:inputType="textEmailAddress" android:textCursorDrawable="@drawable/base_text_cursor_shape" app:layout_constraintEnd_toEndOf="@id/tv_title" app:layout_constraintStart_toStartOf="@id/tv_title" app:layout_constraintTop_toBottomOf="@id/tv_title_tips" app:met_clearButton_icon="@mipmap/base_ic_delete" app:met_errorColor="#fffa4a5e" app:met_floatingLabel="highlight" app:met_floatingLabelPadding="@dimen/dimen_common_20" app:met_floatingLabelText="@string/ac_first_name" app:met_floatingLabelTextColor="@color/ac_color_13b0b9" app:met_floatingLabelTextSize="@dimen/dimen_common_text_size_18" app:met_primaryColor="@color/ac_color_13b0b9" app:met_underlineColor="@color/color_2F2F2F" app:met_underlineSize="0.5dip" />
            <com.beans.widget.edit.material.MaterialEditText android:textSize="@dimen/dimen_common_text_size_18" android:textColor="@color/color_2F2F2F" android:textColorHint="#ffbdbdbd" android:id="@id/edit_last" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginTop="30.0dip" android:hint="@string/ac_last_name" android:maxLength="35" android:inputType="textEmailAddress" android:textCursorDrawable="@drawable/base_text_cursor_shape" app:layout_constraintEnd_toEndOf="@id/tv_title" app:layout_constraintStart_toStartOf="@id/tv_title" app:layout_constraintTop_toBottomOf="@id/edit_first" app:met_clearButton_icon="@mipmap/base_ic_delete" app:met_errorColor="#fffa4a5e" app:met_floatingLabel="highlight" app:met_floatingLabelPadding="@dimen/dimen_common_20" app:met_floatingLabelText="@string/ac_last_name" app:met_floatingLabelTextColor="@color/ac_color_13b0b9" app:met_floatingLabelTextSize="@dimen/dimen_common_text_size_18" app:met_primaryColor="@color/ac_color_13b0b9" app:met_underlineColor="@color/color_2F2F2F" app:met_underlineSize="0.5dip" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
    <androidx.appcompat.widget.AppCompatButton android:enabled="false" android:textSize="@dimen/dimen_common_text_size_18" android:textColor="@color/white" android:gravity="center" android:id="@id/btn_next" android:tag="binding_1" android:background="@drawable/ac_selector_login_button_bg" android:paddingTop="@dimen/dimen_common_12" android:paddingBottom="@dimen/dimen_common_12" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="@dimen/dimen_common_20" android:text="@string/ac_feedback_continue" android:textAllCaps="false" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>